# OpenSCIRanking

./: .gitignore  LICENSE  Makefile  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
inputs/: computer_science_journals.csv  journals.sample.csv
scripts/: build_fractional_journal_graph.py  build_journal_graph.py  build_sources_table.py  compute_adjusted_ranking.py  compute_diversity_adjusted_ranking.py  compute_final_ranking.py  compute_pagerank.py  extract_cas_sheet.py  fetch_openalex_sources.py  fetch_openalex_works.py  fetch_openalex_works_batch.py  merge_works_shards.py  resolve_openalex_sources.py
src/opensci_v2/: batch.py  config.py  io.py  openalex.py  ranking.py  resolve.py  transform.py
